--- a/bands.html
+++ b/bands.html
@@ -6,10 +6,14 @@
     <title>Bollinger Bands Analysis</title>
     <link rel="stylesheet" href="bands.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
 </head>
 <body>
     <div class="chart-container">
         <canvas id="bandsChart"></canvas>
+        <button id="resetZoom" style="position: absolute; top: 10px; left: 10px; z-index: 1000; padding: 8px 16px; background: #fff; border: 1px solid #ddd; border-radius: 4px; cursor: pointer;">
+            Reset Zoom
+        </button>
     </div>
 
     <script type="module">
@@ -18,6 +22,13 @@
         // Initialize chart when DOM is loaded
         document.addEventListener('DOMContentLoaded', () => {
             chartRenderer.initialize();
+            
+            // Add reset zoom button handler
+            document.getElementById('resetZoom').addEventListener('click', () => {
+                if (chartRenderer.chart) {
+                    chartRenderer.chart.resetZoom();
+                }
+            });
         });
 
         // Clean up when page is unloaded
