--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="nav-links">
             <a href="/bands" class="nav-link">Bollinger Bands Analysis</a>
+            <a href="/cycles" class="nav-link">Cycle & Fibonacci Analysis</a>
         </div>
 
         <div class="search-container">
